--- a/page1-mo.html
+++ b/page1-mo.html
@@ -113,10 +113,18 @@
                     <td>기관</td>
                     <td>개인</td>
                   </tr>
+
+
+
+
+
+
+
+
                   <tr>
-                    <td class="fiq-down">-1,808</td>
-                    <td class="fiq-down">-3,710</td>
-                    <td class="fiq-up">+4,881</td>
+                    <td class="fiq-down txt-num">-1,808</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-down txt-num">-3,710</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-up txt-num">+4,881</td><!-- 3.25 txt-num 추가 -->
                   </tr>
                   <tr>
                     <td rowspan="2" class="fiq-td-t">프로그램</td>
@@ -125,10 +133,23 @@
                     <td>개인</td>
                   </tr>
                   <tr>
-                    <td class="fiq-down">-1,808</td>
-                    <td class="fiq-up">+3,710</td>
-                    <td class="fiq-up">+4,881</td>
+                    <td class="fiq-down txt-num">-1,808</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-up txt-num">+3,710</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-up txt-num">+4,881</td><!-- 3.25 txt-num 추가 -->
                   </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+
                   </tbody>
                 </table>
               </div>
@@ -149,25 +170,44 @@
                 <!-- ####### 뉴스 탭 #######-->
                 <div class="fiq-cont fiq-cont1">
                   <ul class="fiq-news-list">
+
+
+
+
+
+
+
+
+
                     <li>
                       <img src="img/mo/img1.png" alt="">
                       [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <img src="img/mo/img1.png" alt="">
                       [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <img src="img/mo/img1.png" alt="">
                       [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
+
+
+
+
+
+
+
+
+
+
                   </ul>
                   <a class="fiq-more-btn">더보기</a>
                 </div>
@@ -249,7 +289,25 @@
                                 </p>
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+
+
+
+
+
+
+
+
+
+
+
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
                               </li>
                             </ul>
                           </div>
@@ -264,13 +322,25 @@
                             <ul>
                               <li>
                                 <p><span>투자의견</span> <span class="fiq-s">유지</span></p>
-                                <p>
+
+
+
+
+
+
+
+
+                                <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                                   <span>목표주가</span>10,000
                                   <span class="fiq-indi fiq-down"></span>
                                 </p>
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
                               </li>
                             </ul>
                           </div>
@@ -285,10 +355,27 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+
+
+
+
+
+
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
+
                               </li>
                             </ul>
                           </div>
@@ -303,10 +390,29 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+
+
+
+
+
+
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
+
+
+
                               </li>
                             </ul>
                           </div>
@@ -321,10 +427,25 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+
+
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
+
+
+
                               </li>
                             </ul>
                           </div>
@@ -339,10 +460,24 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+
+
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
+
+
                               </li>
                             </ul>
                           </div>
@@ -357,10 +492,22 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+
+
+
+
+
+
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
                               </li>
                             </ul>
                           </div>
@@ -408,7 +555,22 @@
               </li>
               <li>
                 <p>목표주가</p>
-                <p class="fiq-down">10,000원(상향)</p>
+
+
+
+
+
+
+
+                <p class="fiq-down txt-num">10,000원(상향)</p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
+
               </li>
               <li>
                 <p>작성자</p>
