--- a/page10-pc.html
+++ b/page10-pc.html
@@ -328,15 +328,15 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-      <div class="fiq-wrap">
+      <div class="fiq-wrap fiq-edit-new"><!-- 3.25 fiq-edit-new 추가 -->
         <article class="fiq-article fiq-page1s fiq-page10">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">종목 플러스</h3>
+              <h2 class="fiq-h2">종목 플러스</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
             </div>
             <div class="fiq-plus-wrap">
               <div class="fiq-small-view">
-                <p>카카오 <span>002543</span></p>
+                <p>카카오 <span class="txt-num">002543</span></p><!-- 3.25 txt-num 추가 -->
                 <div class="fiq-indices txt-num fiq-up">
                   <p class="fiq-price txt-num">22,985.27</p>
                   <div class="fiq-indices-span txt-num"><span></span><p>500</p><p>+0.48%</p></div>
@@ -426,22 +426,22 @@
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                   </ul>
                 </div>
@@ -471,7 +471,7 @@
             </div>
             <div class="fiq-plus-wrap">
               <div class="fiq-small-view">
-                <p>카카오 <span>002543</span></p>
+                <p>카카오 <span class="txt-num">002543</span></p>
                 <div class="fiq-indices txt-num fiq-up">
                   <p class="fiq-price txt-num">2,985.27</p>
                   <div class="fiq-indices-span txt-num"><span></span><p>11.75</p><p>+0.48%</p></div>
@@ -558,22 +558,22 @@
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                   </ul>
                 </div>
@@ -585,15 +585,15 @@
                     </li>
                     <li>
                       <p>목표주가</p>
-                      <p>100,000</p>
+                      <p class="txt-num">100,000</p><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p>목표주가 괴리율</p>
-                      <p>00.00%</p>
+                      <p class="txt-num">00.00%</p><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p>리포트</p>
-                      <a></a>
+                      <a style="height: 50px;display: inline-block;"></a>
                     </li>
                   </ul>
                 </div>
@@ -601,7 +601,7 @@
             </div>
             <div class="fiq-plus-wrap">
               <div class="fiq-small-view">
-                <p>카카오 <span>002543</span></p>
+                <p>카카오 <span class="txt-num">002543</span></p><!-- 3.25 txt-num 추가 -->
                 <div class="fiq-indices txt-num fiq-up">
                   <p class="fiq-price txt-num">2,985.27</p>
                   <div class="fiq-indices-span txt-num"><span></span><p>11.75</p><p>+0.48%</p></div>
@@ -688,22 +688,22 @@
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p class="fiq-tit">콘텐츠 중심으로 글로벌 공략 본격화</p>
                       <p class="fiq-sub-tit">IBK투자증권</p>
-                      <span>2021-12-16 04:58</span>
+                      <span class="txt-num">2021-12-16 04:58</span><!-- 3.25 txt-num 추가 -->
                     </li>
                   </ul>
                 </div>
@@ -715,15 +715,15 @@
                     </li>
                     <li>
                       <p>목표주가</p>
-                      <p>100,000</p>
+                      <p class="txt-num">100,000</p><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p>목표주가 괴리율</p>
-                      <p>00.00%</p>
+                      <p class="txt-num">00.00%</p><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <p>리포트</p>
-                      <a></a>
+                      <a style="height: 50px;display: inline-block;"></a>
                     </li>
                   </ul>
                 </div>
