--- a/page12-pc.html
+++ b/page12-pc.html
@@ -333,7 +333,7 @@
         <article class="fiq-article fiq-page1s fiq-page12">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">가상자산(암호화폐)</h3>
+              <h2 class="fiq-h2">가상자산(암호화폐)</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
               <div class="fiq-source">
                 <p>01.25 09:50 | 단위:원 | 제공: <span></span></p>
               </div>
@@ -426,42 +426,42 @@
                   <li>
                     <div class="fiq-img"></div>
                     <div class="fiq-txt-box">
-                      <p>암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
+                      <h3><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
                       <p class="fiq-txt">1월 25일 한국경제신문의 암호화폐 투자 뉴스레터 ‘코알라’에 실린 기사입니다. 주 5회, 매일 아침 발행하는 코알라를 받아보세요…</p>
                     </div>
                   </li>
                   <li>
                     <div class="fiq-img"></div>
                     <div class="fiq-txt-box">
-                      <p>암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
+                      <h3><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
                       <p class="fiq-txt">1월 25일 한국경제신문의 암호화폐 투자 뉴스레터 ‘코알라’에 실린 기사입니다. 주 5회, 매일 아침 발행하는 코알라를 받아보세요…</p>
                     </div>
                   </li>
                   <li>
                     <div class="fiq-img"></div>
                     <div class="fiq-txt-box">
-                      <p>암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
+                      <h3><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
                       <p class="fiq-txt">1월 25일 한국경제신문의 암호화폐 투자 뉴스레터 ‘코알라’에 실린 기사입니다. 주 5회, 매일 아침 발행하는 코알라를 받아보세요…</p>
                     </div>
                   </li>
                   <li>
                     <div class="fiq-img"></div>
                     <div class="fiq-txt-box">
-                      <p>암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
+                      <h3><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
                       <p class="fiq-txt">1월 25일 한국경제신문의 암호화폐 투자 뉴스레터 ‘코알라’에 실린 기사입니다. 주 5회, 매일 아침 발행하는 코알라를 받아보세요…</p>
                     </div>
                   </li>
                   <li>
                     <div class="fiq-img"></div>
                     <div class="fiq-txt-box">
-                      <p>암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
+                      <h3><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
                       <p class="fiq-txt">1월 25일 한국경제신문의 암호화폐 투자 뉴스레터 ‘코알라’에 실린 기사입니다. 주 5회, 매일 아침 발행하는 코알라를 받아보세요…</p>
                     </div>
                   </li>
                   <li>
                     <div class="fiq-img"></div>
                     <div class="fiq-txt-box">
-                      <p>암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
+                      <h3><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
                       <p class="fiq-txt">1월 25일 한국경제신문의 암호화폐 투자 뉴스레터 ‘코알라’에 실린 기사입니다. 주 5회, 매일 아침 발행하는 코알라를 받아보세요…</p>
                     </div>
                   </li>
@@ -481,14 +481,14 @@
                     <li>
                       <div class="fiq-l">
                         <span>신근영의 메타버스와 암호화폐 이야기</span>
-                        <p>이제는 꿈에 투자하는 시대다</p>
+                        <h4><a href="">이제는 꿈에 투자하는 시대다</a></h4><!-- 3.25 h4태그로 변경 a태그 박싱-->
                       </div>
                       <div class="fiq-img"></div>
                     </li>
                     <li>
                       <div class="fiq-l">
                         <span>신근영의 메타버스와 암호화폐 이야기</span>
-                        <p>이제는 꿈에 투자하는 시대다</p>
+                        <h4><a href="">이제는 꿈에 투자하는 시대다</a></h4><!-- 3.25 h4태그로 변경 a태그 박싱-->
                       </div>
                       <div class="fiq-img"></div>
                     </li>
