--- a/page13-pc.html
+++ b/page13-pc.html
@@ -333,7 +333,7 @@
         <div class="fiq-wrap">
           <article class="fiq-article fiq-page13">
             <section class="fiq-section">
-              <p class="fiq-tit">데일리 투자의견</p>
+              <h2 class="fiq-h2">데일리 투자의견</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
               <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">목표주가 상향 TOP 10</a>
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">최신 발표</a>
