--- a/page15-mo.html
+++ b/page15-mo.html
@@ -49,7 +49,7 @@
           <p class="fiq-tit">한경종목+</p>
           <section>
             <div class="fiq-cell">
-              <h2 class="fiq-h2">카카오톡 <span>069500</span></h2>
+              <h2 class="fiq-h2">카카오톡 <span class="txt-num">069500</span></h2><!-- 3.25 txt-num 추가 -->
               <div class="fiq-indices txt-num fiq-up">
                 <p class="fiq-price txt-num">22,985.27</p>
                 <div class="fiq-indices-span txt-num"><span></span><p>11.75</p><p>+0.48%</p></div>
@@ -58,10 +58,10 @@
                 <img src="img/pc/graph21.png" alt="">
               </div>
               <ul>
-                <li><p>2020년 말로 돌아간 코스피…반도체주 ‘와르 2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
-                <li><p>코스피, 기관/외국인 매도에 낙폭 확대…SK하2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
-                <li><p>50만원짜리 호텔 꽃다발도 쓱…새벽배송 이어 2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
-                <li><p>20일, 기관 거래소에서 삼성SDI(+0.48%),삼성 2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
+                <li><h3><a href="">2020년 말로 돌아간 코스피…반도체주 ‘와르 2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25 span에 txt-num 추가 -->
+                <li><h3><a href="">코스피, 기관/외국인 매도에 낙폭 확대…SK하2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25  span에 txt-num 추가 -->
+                <li><h3><a href="">50만원짜리 호텔 꽃다발도 쓱…새벽배송 이어 2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25  span에 txt-num 추가 -->
+                <li><h3><a href="">20일, 기관 거래소에서 삼성SDI(+0.48%),삼성 2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25  span에 txt-num 추가 -->
               </ul>
               <table cellpadding="0" cellspacing="0" border="0" class="fiq-t">
                 <colgroup>
@@ -94,11 +94,11 @@
                 </colgroup>
                 <thead>
                 <tr>
-                  <th scope="col">PER</th>
-                  <th scope="col">EPS</th>
-                  <th scope="col">PBR</th>
-                  <th scope="col">BPS</th>
-                  <th scope="col">ROE</th>
+                  <th scope="col" class="txt-en">PER</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">EPS</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">PBR</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">BPS</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">ROE</th><!-- 3.25 txt-en 추가 -->
                 </tr>
                 </thead>
                 <tbody>
@@ -139,7 +139,7 @@
           </section>
           <section>
             <div class="fiq-cell">
-              <h2 class="fiq-h2">카카오톡 <span>069500</span></h2>
+              <h2 class="fiq-h2">카카오톡 <span class="txt-num">069500</span></h2><!-- 3.25 txt-num 추가 -->
               <div class="fiq-indices txt-num fiq-up">
                 <p class="fiq-price txt-num">22,985.27</p>
                 <div class="fiq-indices-span txt-num"><span></span><p>11.75</p><p>+0.48%</p></div>
@@ -148,10 +148,10 @@
                 <img src="img/pc/graph21.png" alt="">
               </div>
               <ul>
-                <li><p>2020년 말로 돌아간 코스피…반도체주 ‘와르 2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
-                <li><p>코스피, 기관/외국인 매도에 낙폭 확대…SK하2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
-                <li><p>50만원짜리 호텔 꽃다발도 쓱…새벽배송 이어 2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
-                <li><p>20일, 기관 거래소에서 삼성SDI(+0.48%),삼성 2020년 말로 돌아간 코스피…반도체주 ‘와르</p><span>2021-12-16 04:58</span></li>
+                <li><h3><a href="">2020년 말로 돌아간 코스피…반도체주 ‘와르 2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25 span에 txt-num 추가 -->
+                <li><h3><a href="">코스피, 기관/외국인 매도에 낙폭 확대…SK하2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25  span에 txt-num 추가 -->
+                <li><h3><a href="">50만원짜리 호텔 꽃다발도 쓱…새벽배송 이어 2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25  span에 txt-num 추가 -->
+                <li><h3><a href="">20일, 기관 거래소에서 삼성SDI(+0.48%),삼성 2020년 말로 돌아간 코스피…반도체주 ‘와르</a></h3><span class="txt-num">2021-12-16 04:58</span></li><!-- 3.25 h3태그로 변경 a태그 박싱 --><!-- 3.25  span에 txt-num 추가 -->
               </ul>
               <table cellpadding="0" cellspacing="0" border="0" class="fiq-t">
                 <colgroup>
@@ -184,11 +184,11 @@
                 </colgroup>
                 <thead>
                 <tr>
-                  <th scope="col">PER</th>
-                  <th scope="col">EPS</th>
-                  <th scope="col">PBR</th>
-                  <th scope="col">BPS</th>
-                  <th scope="col">ROE</th>
+                  <th scope="col" class="txt-en">PER</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">EPS</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">PBR</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">BPS</th><!-- 3.25 txt-en 추가 -->
+                  <th scope="col" class="txt-en">ROE</th><!-- 3.25 txt-en 추가 -->
                 </tr>
                 </thead>
                 <tbody>
