--- a/page16-mo.html
+++ b/page16-mo.html
@@ -66,43 +66,43 @@
               <h2 class="fiq-h2">밸류에이션</h2>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>EPS>0</s></i>
+                <i class="txt-en"><s>EPS>0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>PER>0</s></i>
+                <i class="txt-en"><s>PER>0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>BPS>0</s></i>
+                <i class="txt-en"><s>BPS>0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>PBR>0</s></i>
+                <i class="txt-en"><s>PBR>0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>ROE>0</s></i>
+                <i class="txt-en"><s>ROE>0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>EPS<0</s></i>
+                <i class="txt-en"><s>EPS<0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>PER<0</s></i>
+                <i class="txt-en"><s>PER<0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>BPS<0</s></i>
+                <i class="txt-en"><s>BPS<0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>PBR<0</s></i>
+                <i class="txt-en"><s>PBR<0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="valuation">
-                <i><s>ROE<0</s></i>
+                <i class="txt-en"><s>ROE<0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
             </div>
             <div class="fiq-cell fiq-cell3">
@@ -141,19 +141,19 @@
               </label>
               <label>
                 <input type="radio" name="indi">
-                <i><s>RSI>0</s></i>
+                <i class="txt-en"><s>RSI>0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="indi">
-                <i><s>CCI>0</s></i>
+                <i class="txt-en"><s>CCI>0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="indi">
-                <i><s>RSI<0</s></i>
+                <i class="txt-en"><s>RSI<0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="indi">
-                <i><s>CCI<0</s></i>
+                <i class="txt-en"><s>CCI<0</s></i><!-- 3.25 txt-en 추가 -->
               </label>
               <label>
                 <input type="radio" name="indi">
