--- a/page18-mo.html
+++ b/page18-mo.html
@@ -103,29 +103,29 @@
               <ul class="fiq-news">
                 <li>
                   <div class="fiq-l">
-                    <p class="fiq-tit">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
-                    <span>2022.01.13</span>
+                    <h3 class="fiq-tit"><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
+                    <span class="txt-num">2022.01.13</span><!-- 3.25 txt-num 추가 -->
                   </div>
                   <img src="img/pc/img1.png" alt="">
                 </li>
                 <li>
                   <div class="fiq-l">
-                    <p class="fiq-tit">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
-                    <span>2022.01.13</span>
+                    <h3 class="fiq-tit"><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
+                    <span class="txt-num">2022.01.13</span><!-- 3.25 txt-num 추가 -->
                   </div>
                   <img src="img/pc/img1.png" alt="">
                 </li>
                 <li>
                   <div class="fiq-l">
-                    <p class="fiq-tit">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
-                    <span>2022.01.13</span>
+                    <h3 class="fiq-tit"><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
+                    <span class="txt-num">2022.01.13</span><!-- 3.25 txt-num 추가 -->
                   </div>
                   <img src="img/pc/img1.png" alt="">
                 </li>
                 <li>
                   <div class="fiq-l">
-                    <p class="fiq-tit">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</p>
-                    <span>2022.01.13</span>
+                    <h3 class="fiq-tit"><a href="">암호화폐로 100억 모아 국보 공동구매…이게 가능 하다니 [임현우의 비트코인 나우]</a></h3><!-- 3.25 h3태그로 변경 a태그 박싱 -->
+                    <span class="txt-num">2022.01.13</span><!-- 3.25 txt-num 추가 -->
                   </div>
                   <img src="img/pc/img1.png" alt="">
                 </li>
@@ -137,14 +137,14 @@
                 <li>
                   <div class="fiq-l">
                     <span>신근영의 메타버스와 암호화폐 이야기</span>
-                    <p class="fiq-tit">이제는 꿈에 투자하는 시대다</p>
+                    <h4 class="fiq-tit"><a href="">이제는 꿈에 투자하는 시대다</a></h4><!-- 3.25 h4태그로 변경 a태그 박싱 -->
                   </div>
                   <img src="img/pc/img1.png" alt="">
                 </li>
                 <li>
                   <div class="fiq-l">
                     <span>신근영의 메타버스와 암호화폐 이야기</span>
-                    <p class="fiq-tit">이제는 꿈에 투자하는 시대다</p>
+                    <h4 class="fiq-tit"><a href="">이제는 꿈에 투자하는 시대다</a></h4><!-- 3.25 h4태그로 변경 a태그 박싱 -->
                   </div>
                   <img src="img/pc/img1.png" alt="">
                 </li>
