--- a/page2-1-newly-pc.html
+++ b/page2-1-newly-pc.html
@@ -347,7 +347,7 @@
 
             <!-- ####### 업종등락 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl1">
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap1 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
@@ -392,7 +392,18 @@
                   <!-- ####### td에 fiq-down클래스 들어가면 등락률칸에 하락 파란색 #######-->
                   <tbody>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+                    <td>넥스트사이언스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>13,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -406,7 +417,17 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="">
-                    <td>대성산업<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>대성산업<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>800</td>
                     <td class="txt-num">+0.36%</td>
@@ -420,7 +441,21 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>카카오<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+                    <td>카카오<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
+
+
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>2,500</td>
                     <td class="txt-num">+2.00%</td>
@@ -434,7 +469,21 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+
+                    <td>비케이탑스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
+
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>3,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -448,7 +497,20 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+
+                    <td>신세계 I&C<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>43,000</td>
                     <td class="txt-num">+1.69%</td>
@@ -462,7 +524,18 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>삼성바이오로직스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>삼성바이오로직스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>8,300</td>
                     <td class="txt-num">-3.79%</td>
@@ -476,7 +549,17 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오뱅크<br><span class="fiq-code">00354</span></td>
+
+
+
+                    <td>카카오뱅크<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
+
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>16,200</td>
                     <td class="txt-num">+0.36%</td>
@@ -490,7 +573,16 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>퓨런티어<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>퓨런티어<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>150</td>
                     <td class="txt-num">+2.00%</td>
@@ -504,7 +596,16 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>네이버<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+                    <td>네이버<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>8,150</td>
                     <td class="txt-num">+3.93%</td>
@@ -518,7 +619,14 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>풀무원<br><span class="fiq-code">00354</span></td>
+
+
+
+                    <td>풀무원<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-13.69%</td>
@@ -532,7 +640,14 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>넥스트사이언스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>880</td>
                     <td class="txt-num">-0.74%</td>
@@ -546,7 +661,14 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>대성산업<br><span class="fiq-code">00354</span></td>
+
+
+
+                    <td>대성산업<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>3,700</td>
                     <td class="txt-num">+3.93%</td>
@@ -560,7 +682,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>카카오<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-8.21%</td>
@@ -574,7 +704,14 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
+
+
+
+                    <td>비케이탑스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>300</td>
                     <td class="txt-num">-17.73%</td>
@@ -588,7 +725,14 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
+
+
+
+                    <td>신세계 I&C<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span class="fiq-increase"></span>13,700</td>
                     <td class="txt-num">+3.93%</td>
@@ -640,7 +784,16 @@
                   <!-- ####### td에 fiq-down클래스 들어가면 등락률칸에 하락 파란색 #######-->
                   <tbody>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+                    <td>넥스트사이언스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>13,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -654,7 +807,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="">
-                    <td>대성산업<br><span class="fiq-code">00354</span></td>
+
+
+
+                    <td>대성산업<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>800</td>
                     <td class="txt-num">+0.36%</td>
@@ -668,7 +829,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>카카오<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>카카오<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>2,500</td>
                     <td class="txt-num">+2.00%</td>
@@ -682,7 +851,16 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>비케이탑스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>3,000</td>
                     <td class="txt-num">+3.93%</td>
@@ -696,7 +874,19 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+
+                    <td>신세계 I&C<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>43,000</td>
                     <td class="txt-num">+1.69%</td>
@@ -710,7 +900,18 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>삼성바이오로직스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+
+                    <td>삼성바이오로직스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>8,300</td>
                     <td class="txt-num">-3.79%</td>
@@ -724,7 +925,16 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오뱅크<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+                    <td>카카오뱅크<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>16,200</td>
                     <td class="txt-num">+0.36%</td>
@@ -738,7 +948,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>퓨런티어<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>퓨런티어<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>150</td>
                     <td class="txt-num">+2.00%</td>
@@ -752,7 +970,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>네이버<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>네이버<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>8,150</td>
                     <td class="txt-num">+3.93%</td>
@@ -766,7 +992,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>풀무원<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>풀무원<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-13.69%</td>
@@ -780,7 +1014,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>넥스트사이언스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>넥스트사이언스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">530,200</td>
                     <td class="txt-num"><span></span>880</td>
                     <td class="txt-num">-0.74%</td>
@@ -794,7 +1036,19 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>대성산업<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+
+                    <td>대성산업<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
+
                     <td class="txt-num">3,010</td>
                     <td class="txt-num"><span></span>3,700</td>
                     <td class="txt-num">+3.93%</td>
@@ -808,7 +1062,14 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-down">
-                    <td>카카오<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>카카오<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
                     <td class="txt-num">24,710</td>
                     <td class="txt-num"><span></span>1,300</td>
                     <td class="txt-num">-8.21%</td>
@@ -822,7 +1083,15 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>비케이탑스<br><span class="fiq-code">00354</span></td>
+
+
+
+
+                    <td>비케이탑스<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <td class="txt-num">6,820</td>
                     <td class="txt-num"><span></span>300</td>
                     <td class="txt-num">-17.73%</td>
@@ -836,7 +1105,19 @@
                     <td><a class="fiq-a"><img src="img/pc/arrow_right-g.svg" alt=""></a></td>
                   </tr>
                   <tr class="fiq-up">
-                    <td>신세계 I&C<br><span class="fiq-code">00354</span></td>
+
+
+
+
+
+
+
+                    <td>신세계 I&C<br><span class="fiq-code txt-num">00354</span></td><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
                     <td class="txt-num">713,700</td>
                     <td class="txt-num"><span class="fiq-increase"></span>13,700</td>
                     <td class="txt-num">+3.93%</td>
