--- a/page2-1-pc.html
+++ b/page2-1-pc.html
@@ -355,7 +355,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap1 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
@@ -1075,7 +1075,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap2 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap2 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab2-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab2-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
@@ -1795,7 +1795,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap3 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap3 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab3-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab3-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
@@ -2515,7 +2515,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap4 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap4 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab4-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab4-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
@@ -3235,7 +3235,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap5 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap5 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab5-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab5-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
@@ -3955,7 +3955,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap6 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap6 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab6-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab6-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
@@ -4675,7 +4675,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap7 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap7 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab7-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
                 <a class="fiq-a fiq-tab7-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
               </div>
