--- a/page2-4-pc.html
+++ b/page2-4-pc.html
@@ -353,7 +353,7 @@
 
 
 <!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap1 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -731,7 +731,7 @@
             <!-- ####### 프로그램매매동향 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl2">
 
-              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap2 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap2 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab2-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab2-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -1108,7 +1108,7 @@
 
             <!-- ####### 외국인매매 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl3">
-              <div class="fiq-tab-wrap  fiq-tab-type-b fiq-tab-wrap3 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap  fiq-tab-type-b fiq-tab-2below fiq-tab-wrap3 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab3-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab3-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -1486,7 +1486,7 @@
             <!-- ####### 외국인보유율 탭 #######-->
             <div class="fiq-tab-sibl fiq-tab-sibl4">
 
-              <div class="fiq-tab-wrap  fiq-tab-type-b fiq-tab-wrap4 fiq-tab2n fiq-tab1-active">
+              <div class="fiq-tab-wrap  fiq-tab-type-b fiq-tab-2below fiq-tab-wrap4 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
                 <a class="fiq-a fiq-tab4-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">업종별</a>
                 <a class="fiq-a fiq-tab4-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">일자별</a>
               </div>
@@ -1693,9 +1693,9 @@
                     <th scope="col" rowspan="2">업종</th>
                     <th scope="col" rowspan="2">개인</th>
                     <th scope="col" rowspan="2">외국인</th>
-                    <th scope="col" rowspan="2" style="border-right:1px solid #ddd;">기관계</th>
+                    <th scope="col" rowspan="2">기관계</th><!-- 3.25 스타일 삭제 -->
                     <th scope="col" colspan="7">증권</th>
-                    <th scope="col" rowspan="2" style="border-left:1px solid #ddd;">기타법인</th>
+                    <th scope="col" rowspan="2">기타법인</th><!-- 3.25 스타일 삭제 -->
                   </tr>
                   <tr>
                     <th scope="col">증권</th>
