--- a/page2-6-pc.html
+++ b/page2-6-pc.html
@@ -328,20 +328,11 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-
-
-
-<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
       <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-page1s">
           <section class="fiq-section" style="margin-top: 50px;">
-<!-- ####### 3.16 수정 끝 #######-->
-
-
-
-
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">증시자금 동향</h3>
+              <h2 class="fiq-h2">증시자금 동향</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
               <div class="fiq-date">
                 <p class="fiq-date-time txt-num"></p>
                 <p>20분 지연</p>
