--- a/page4-pc.html
+++ b/page4-pc.html
@@ -328,26 +328,13 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-
-
-
-
-
-
-
-<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
       <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-page1s fiq-page4">
           <div class="fiq-top-title">
             <h2 class="fiq-h2">마켓맵</h2>
           </div>
-          <section class="fiq-section"">
-<!-- ####### 3.16 수정 끝 #######-->
-
-
-
-<!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-            <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
+          <section class="fiq-section">
+            <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap1 fiq-tab2n fiq-tab1-active"><!-- 3.25 fiq-tab-2below 추가 -->
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
             </div>
