--- a/page9-2-pc.html
+++ b/page9-2-pc.html
@@ -450,13 +450,22 @@
                       <!-- ####### 그래프 들어가는 자리 img 삭제 #######-->
                       <img src="img/pc/graph11.png" alt="">
                     </div>
+
+
+
                     <div class="fiq-legend">
-                      <p>펄어비스 <span>20%</span></p>
-                      <p>위메이드 <span>35%</span></p>
-                      <p>서울옥션 <span>20%</span></p>
-                      <p>카카오 <span>18%</span></p>
-                      <p>삼성전자 <span>10%</span></p>
+                      <p>펄어비스 <span class="txt-num">20%</span></p><!-- 3.25 txt-num 추가 -->
+                      <p>위메이드 <span class="txt-num">35%</span></p><!-- 3.25 txt-num 추가 -->
+                      <p>서울옥션 <span class="txt-num">20%</span></p><!-- 3.25 txt-num 추가 -->
+                      <p>카카오 <span class="txt-num">18%</span></p><!-- 3.25 txt-num 추가 -->
+                      <p>삼성전자 <span class="txt-num">10%</span></p><!-- 3.25 txt-num 추가 -->
                     </div>
+
+
+
+
+
+
                   </div>
                 </div>
                 <div class="fiq-cell">
@@ -467,10 +476,17 @@
                       <img src="img/pc/graph12.png" alt="">
                     </div>
                     <div class="fiq-legend">
-                      <p>메타버스 <span>20%</span></p>
-                      <p>메타버스 <span>35%</span></p>
-                      <p>메타버스 <span>20%</span></p>
-                      <p>메타버스 <span>18%</span></p>
+
+
+
+                      <p>메타버스 <span class="txt-num">20%</span></p><!-- 3.25 txt-num 추가 -->
+                      <p>메타버스 <span class="txt-num">35%</span></p><!-- 3.25 txt-num 추가 -->
+                      <p>메타버스 <span class="txt-num">20%</span></p><!-- 3.25 txt-num 추가 -->
+                      <p>메타버스 <span class="txt-num">18%</span></p><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     </div>
                   </div>
                 </div>
