--- a/page9-mo.html
+++ b/page9-mo.html
@@ -87,7 +87,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -97,7 +97,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -107,7 +107,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -129,7 +129,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -139,7 +139,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -149,7 +149,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -171,7 +171,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -181,7 +181,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -191,7 +191,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -213,7 +213,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -223,7 +223,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -233,7 +233,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -255,7 +255,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>SK하이닉스</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -265,7 +265,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -275,7 +275,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -303,7 +303,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -313,7 +313,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -323,7 +323,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -345,7 +345,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -355,7 +355,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -365,7 +365,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -387,7 +387,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -397,7 +397,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -407,7 +407,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -429,7 +429,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -439,7 +439,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -449,7 +449,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -471,7 +471,7 @@
                       <li class="fiq-up">
                         <div class="fiq-l">
                           <p>SK하이닉스</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -481,7 +481,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
@@ -491,7 +491,7 @@
                       <li class="fiq-down">
                         <div class="fiq-l">
                           <p>삼성전자</p>
-                          <span>005930</span>
+                          <span class="txt-num">005930</span><!-- 3.25 txt-num 추가 -->
                         </div>
                         <div class="fiq-r">
                           <p class="fiq-price txt-num">70,200</p>
