--- a/main-v2-pc.html
+++ b/main-v2-pc.html
@@ -512,57 +512,73 @@
                 <div class="swiper mySwiper fiq-swiper fiq-swiper1">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide fiq-slide">
-                      <div class="fiq-indices txt-num fiq-up">
-                        <div class="fiq-indices-span txt-num"><p>다우존스</p><span></span><div><p>11.75</p><p>+0.48%</p></div></div>
+
+                      <!-- 3.25 수정 -->
+                      <div class="fiq-indices fiq-up">
+                        <div class="fiq-indices-span"><p>다우존스</p><span></span><div class="txt-num"><p>11.75</p><p>+0.48%</p></div></div>
                       </div>
+                      <!-- 3.25 수정 -->
+
                       <div class="fiq-graph" >
                         <img src="img/pc/graph14.png" alt="" style="width: 100%;">
                       </div>
                     </div>
                     <div class="swiper-slide fiq-slide">
-                      <div class="fiq-indices txt-num fiq-down">
-                        <div class="fiq-indices-span txt-num"><p>나스닥</p><span></span><div><p>11.75</p><p>+0.48%</p></div></div>
+                      <!-- 3.25 수정 -->
+                      <div class="fiq-indices fiq-up">
+                        <div class="fiq-indices-span"><p>다우존스</p><span></span><div class="txt-num"><p>11.75</p><p>+0.48%</p></div></div>
                       </div>
+                      <!-- 3.25 수정 -->
                       <div class="fiq-graph" >
                         <img src="img/pc/graph15.png" alt="" style="width: 100%;">
                       </div>
                     </div>
                     <div class="swiper-slide fiq-slide">
-                      <div class="fiq-indices txt-num fiq-up">
-                        <div class="fiq-indices-span txt-num"><p>항생지수</p><span></span><div><p>11.75</p><p>+0.48%</p></div></div>
+                      < <!-- 3.25 수정 -->
+                      <div class="fiq-indices fiq-up">
+                        <div class="fiq-indices-span"><p>다우존스</p><span></span><div class="txt-num"><p>11.75</p><p>+0.48%</p></div></div>
                       </div>
+                      <!-- 3.25 수정 -->
                       <div class="fiq-graph" >
                         <img src="img/pc/graph16.png" alt="" style="width: 100%;">
                       </div>
                     </div>
                     <div class="swiper-slide fiq-slide">
-                      <div class="fiq-indices txt-num fiq-up">
-                        <div class="fiq-indices-span txt-num"><p>니케이225</p><span></span><div><p>11.75</p><p>+0.48%</p></div></div>
+                      <!-- 3.25 수정 -->
+                      <div class="fiq-indices fiq-up">
+                        <div class="fiq-indices-span"><p>다우존스</p><span></span><div class="txt-num"><p>11.75</p><p>+0.48%</p></div></div>
                       </div>
+                      <!-- 3.25 수정 -->
                       <div class="fiq-graph" >
                         <img src="img/pc/graph14.png" alt="" style="width: 100%;">
                       </div>
                     </div>
                     <div class="swiper-slide fiq-slide">
-                      <div class="fiq-indices txt-num fiq-up">
-                        <div class="fiq-indices-span txt-num"><p class="txt-en">WTI</p><span></span><div><p>11.75</p><p>+0.48%</p></div></div>
+                      <!-- 3.25 수정 -->
+                      <div class="fiq-indices fiq-up">
+                        <div class="fiq-indices-span"><p>다우존스</p><span></span><div class="txt-num"><p>11.75</p><p>+0.48%</p></div></div>
                       </div>
+                      <!-- 3.25 수정 -->
                       <div class="fiq-graph" >
                         <img src="img/pc/graph14.png" alt="" style="width: 100%;">
                       </div>
                     </div>
                     <div class="swiper-slide fiq-slide">
-                      <div class="fiq-indices txt-num fiq-up">
-                        <div class="fiq-indices-span txt-num"><p>독일</p><span></span><div><p>11.75</p><p>+0.48%</p></div></div>
+                      <!-- 3.25 수정 -->
+                      <div class="fiq-indices fiq-up">
+                        <div class="fiq-indices-span"><p>다우존스</p><span></span><div class="txt-num"><p>11.75</p><p>+0.48%</p></div></div>
                       </div>
+                      <!-- 3.25 수정 -->
                       <div class="fiq-graph" >
                         <img src="img/pc/graph14.png" alt="" style="width: 100%;">
                       </div>
                     </div>
                     <div class="swiper-slide fiq-slide">
-                      <div class="fiq-indices txt-num fiq-up">
-                        <div class="fiq-indices-span txt-num"><p>다우존스</p><span></span><div><p>11.75</p><p>+0.48%</p></div></div>
+                      <!-- 3.25 수정 -->
+                      <div class="fiq-indices fiq-up">
+                        <div class="fiq-indices-span"><p>다우존스</p><span></span><div class="txt-num"><p>11.75</p><p>+0.48%</p></div></div>
                       </div>
+                      <!-- 3.25 수정 -->
                       <div class="fiq-graph" >
                         <img src="img/pc/graph14.png" alt="" style="width: 100%;">
                       </div>
@@ -1555,6 +1571,7 @@
             </section>
             <section>
               <div class="fiq-sec-inner">
+                <hr class="fiq-top-line"><!-- 3.25 <hr class="fiq-top-line"> 추가 -->
                 <h4>한경 종목+</h4>
                 <ul class="fiq-ul-style">
                   <li>
@@ -1563,24 +1580,30 @@
                       <div class="fiq-news-img">
                         <img src="img/pc/img1.png" alt="">
                       </div>
-                      <p class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
                     <span class="fiq-up">효성티엔씨 +5.67%</span>
                     <div class="fiq-news-item">
                       <div class="fiq-news-img"></div>
-                      <p class="fiq-tit">루트로닉·DB하이텍…"상승세 속 낙폭과대株 유망"</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
                     <span class="fiq-down">삼성전자 -0.56%</span>
                     <div class="fiq-news-item">
                       <div class="fiq-news-img"></div>
-                      <p class="fiq-tit">퍼스텍 수주공시 - KUH-1(수리온) 후속양산(4차) 123.4억원 (매출액대비 9.3 %)</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p>
                     </div>
                   </li>
                   <li>
@@ -1589,8 +1612,10 @@
                       <div class="fiq-news-img">
                         <img src="img/pc/img2.png" alt="">
                       </div>
-                      <p class="fiq-tit">롯데건설, 인천 청라의료복합타운 조성 도전장</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
@@ -1599,8 +1624,10 @@
                       <div class="fiq-news-img">
                         <img src="img/pc/img3.png" alt="">
                       </div>
-                      <p class="fiq-tit">한국인공지능검증원, 광주서 뽐낸다</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
@@ -1609,8 +1636,10 @@
                       <div class="fiq-news-img">
                         <img src="img/pc/img4.png" alt="">
                       </div>
-                      <p class="fiq-tit">상승여력이 큰 우량주 3선</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
@@ -1619,16 +1648,20 @@
                       <div class="fiq-news-img">
                         <img src="img/pc/img1.png" alt="">
                       </div>
-                      <p class="fiq-tit">"억대 연봉 꿈꾸며 도전했지만…" 보험 설계사 '줄퇴사' 이유</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
                     <span class="fiq-up">DB하이텍 +5.67%</span>
                     <div class="fiq-news-item">
                       <div class="fiq-news-img"></div>
-                      <p class="fiq-tit">골드만 '불완전 판매 논란' 말레이채권…동부화재 등 보험사들 5억弗 샀다</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
@@ -1637,8 +1670,10 @@
                       <div class="fiq-news-img">
                         <img src="img/pc/img2.png" alt="">
                       </div>
-                      <p class="fiq-tit">'금리 상승 수혜' 은행·보험株 동반강세</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                   <li>
@@ -1647,8 +1682,10 @@
                       <div class="fiq-news-img">
                         <img src="img/pc/img3.png" alt="">
                       </div>
-                      <p class="fiq-tit">기관 순매도상위에 화학 업종 5종목</p>
-                      <p class="fiq-date">2022.01.13</p>
+                      <a href=""><!-- 3.25 a태그로 박싱 -->
+                        <h3 class="fiq-tit">수소엔진 장착한 가스공사, 지난주 목표 주가 12% 상승</h3><!-- 3.25 h3태그로 변경 -->
+                      </a>
+                      <p class="fiq-date txt-num">2022.01.13</p><!-- 3.25 txt-num 추가 -->
                     </div>
                   </li>
                 </ul>
