--- a/page1-4-pc.html
+++ b/page1-4-pc.html
@@ -332,7 +332,7 @@
         <article class="fiq-article fiq-page1s">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">KOSPI 200옵션</h3>
+              <h2 class="fiq-h2">KOSPI 200옵션</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
               <div class="fiq-select">
                 <select class="fiq-se">
                   <option value="">22년 3월물</option>
