--- a/page1-5-pc.html
+++ b/page1-5-pc.html
@@ -332,7 +332,7 @@
         <article class="fiq-article fiq-page1s">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">원자재</h3>
+              <h2 class="fiq-h2">원자재</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
             </div>
 
             <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab5n fiq-tab1-active">
