--- a/page1-6-pc.html
+++ b/page1-6-pc.html
@@ -332,7 +332,7 @@
         <article class="fiq-article fiq-page1s">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">통화환율</h3>
+              <h2 class="fiq-h2">통화환율</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
             </div>
 
             <div class="fiq-cont fiq-page1-6">
@@ -371,6 +371,7 @@
                     <td class="txt-num">0.50%</td>
                     <td class="txt-num">2021-11-12</td>
                     <td class="txt-num">0:00:00</td>
+                    <td></td>
                   </tr>
                   <tr class="fiq-down">
                     <td>파운드/달러</td>
@@ -380,6 +381,7 @@
                     <td class="txt-num">-0.95%</td>
                     <td class="txt-num">2021-11-12</td>
                     <td class="txt-num">0:00:00</td>
+                    <td></td>
                   </tr>
                   <tr class="fiq-up">
                     <td>달러/엔</td>
@@ -389,6 +391,7 @@
                     <td class="txt-num">0.50%</td>
                     <td class="txt-num">2021-11-12</td>
                     <td class="txt-num">0:00:00</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td>호주/달러</td>
@@ -398,6 +401,7 @@
                     <td class="txt-num">0.50%</td>
                     <td class="txt-num">2021-11-12</td>
                     <td class="txt-num">0:00:00</td>
+                    <td></td>
                   </tr>
                   <tr class="fiq-up">
                     <td>달러/원</td>
@@ -407,6 +411,7 @@
                     <td class="txt-num">0.50%</td>
                     <td class="txt-num">2021-11-12</td>
                     <td class="txt-num">0:00:00</td>
+                    <td></td>
                   </tr>
                   <tr>
                     <td>엔/원</td>
@@ -416,6 +421,7 @@
                     <td class="txt-num">0.50%</td>
                     <td class="txt-num">2021-11-12</td>
                     <td class="txt-num">0:00:00</td>
+                    <td></td>
                   </tr>
                 </tbody>
               </table>
