--- a/page1-newly-mo.html
+++ b/page1-newly-mo.html
@@ -123,9 +123,9 @@
                     <td>개인</td>
                   </tr>
                   <tr>
-                    <td class="fiq-down">-1,808</td>
-                    <td class="fiq-down">-3,710</td>
-                    <td class="fiq-up">+4,881</td>
+                    <td class="fiq-down txt-num">-1,808</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-down txt-num">-3,710</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-up txt-num">+4,881</td><!-- 3.25 txt-num 추가 -->
                   </tr>
                   <tr>
                     <td rowspan="2" class="fiq-td-t">프로그램</td>
@@ -134,9 +134,9 @@
                     <td>개인</td>
                   </tr>
                   <tr>
-                    <td class="fiq-down">-1,808</td>
-                    <td class="fiq-up">+3,710</td>
-                    <td class="fiq-up">+4,881</td>
+                    <td class="fiq-down txt-num">-1,808</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-up txt-num">+3,710</td><!-- 3.25 txt-num 추가 -->
+                    <td class="fiq-up txt-num">+4,881</td><!-- 3.25 txt-num 추가 -->
                   </tr>
                   </tbody>
                 </table>
@@ -145,20 +145,6 @@
                 <!-- ####### 그래프 들어가는 자리 img 삭제 #######-->
                 <img src="img/mo/graph1.png" alt="" style="display: block; width: 100%;height: 100%;">
               </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- -------------------------####### 03.19 수정 #######-->
               <div class="fiq-section fiq-sec2">
                 <div class="fiq-tab-wrap fiq-tab-type-b fiq-tabs-6n fiq-tab-wrap2 fiq-tab-active1">
                   <a class="fiq-a fiq-tab fiq-tab1">뉴스</a>
@@ -172,22 +158,22 @@
                   <ul class="fiq-news-list">
                     <li>
                       <img src="img/mo/img1.png" alt="">
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <h3>[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <img src="img/mo/img1.png" alt="">
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <h3>[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <h3>[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
                     <li>
                       <img src="img/mo/img1.png" alt="">
-                      [Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록
-                      <span>2021.12.16</span>
+                      <h3>[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
+                      <span class="txt-num">2021.12.16</span><!-- 3.25 txt-num 추가 -->
                     </li>
                   </ul>
                   <a class="fiq-more-btn">더보기</a>
@@ -205,35 +191,35 @@
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-up">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-up">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-up">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-down">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     </tbody>
                   </table>
@@ -251,35 +237,35 @@
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-up">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-up">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-up">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     <tr class="fiq-down">
                       <td>삼성전자 <span class="txt-num">00532</span></td>
                       <td>
                         <div class="fiq-indi"><p class="txt-num">70,200</p><span></span><p class="txt-num">500</p></div>
                       </td>
-                      <td><span>+0.48%</span></td>
+                      <td class="txt-num"><span>+0.48%</span></td><!-- 3.25 txt-num 추가 -->
                     </tr>
                     </tbody>
                   </table>
@@ -297,13 +283,13 @@
                             <ul>
                               <li class="fiq-up">
                                 <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-                                <p>
+                                <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                                   <span>목표주가</span>10,000
                                   <span class="fiq-indi fiq-down"></span>
                                 </p>
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
                               </li>
                             </ul>
                           </div>
@@ -318,13 +304,13 @@
                             <ul>
                               <li>
                                 <p><span>투자의견</span> <span class="fiq-s">유지</span></p>
-                                <p>
+                                <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                                   <span>목표주가</span>10,000
                                   <span class="fiq-indi fiq-down"></span>
                                 </p>
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
                               </li>
                             </ul>
                           </div>
@@ -339,10 +325,10 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
                               </li>
                             </ul>
                           </div>
@@ -357,10 +343,10 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
                               </li>
                             </ul>
                           </div>
@@ -375,10 +361,10 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
                               </li>
                             </ul>
                           </div>
@@ -393,10 +379,10 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
                               </li>
                             </ul>
                           </div>
@@ -411,10 +397,10 @@
                             <ul>
                               <li class="fiq-down">
                                 <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                                <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                                <p class="txt-num"><span>목표주가</span>10,000 <span class="fiq-indi"></span></p><!-- 3.25 txt-num 추가 -->
                                 <p><span>작성자</span>홍길동</p>
                                 <p><span>발행기관</span>미래에셋증권</p>
-                                <p><span>발표일</span>2022-02-08</p>
+                                <p class="txt-num"><span>발표일</span>2022-02-08</p><!-- 3.25 txt-num 추가 -->
                               </li>
                             </ul>
                           </div>
@@ -442,8 +428,7 @@
 
               <div class="fiq-table-wrap">
                 <div class="fiq-table">
-                  <div class="fiq-date">2021/11/00 | 10:30:00 <span>20분 지연</span></div>
-
+                  <div class="fiq-date txt-num">2021/11/00 | 10:30:00 <span>20분 지연</span></div><!-- 3.25 txt-num 추가 -->
 
                   <!-- ####### 콜옵션 #######-->
                   <table cellspacing="0" cellpadding="0" border="0" class="fiq-t fiq-t1">
@@ -690,10 +675,6 @@
             <div class="graph">
               <img src="/img/mo/graph3.png" alt="" style="width: 100%;height: 100%;display: inline-block;">
             </div>
-
-
-
-            <!-- ####################### 3.14 수정 #########################-->
             <!--##### p태그에 fiq-up이면 상승-->
             <!--##### p태그에 fiq-down이면 하락-->
             <!--##### p태그에 fiq-stay이면 유지-->
