--- a/page11-pc.html
+++ b/page11-pc.html
@@ -332,7 +332,7 @@
         <article class="fiq-article fiq-page1s fiq-page11">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">한경스크리너</h3>
+              <h2 class="fiq-h2">한경스크리너</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
             </div>
 
             <div class="select-wrap">
