--- a/page13-newly-pc.html
+++ b/page13-newly-pc.html
@@ -333,7 +333,7 @@
         <div class="fiq-wrap fiq-newly">
           <article class="fiq-article fiq-page13">
             <section class="fiq-section fiq-sec1">
-              <p class="fiq-tit">데일리 투자의견</p>
+              <h2 class="fiq-h2">데일리 투자의견</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
               <div class="fiq-tab-wrap fiq-tab-wrap1 fiq-tab2n fiq-tab1-active">
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">주간 목표주가 상향 TOP 10</a>
                 <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">데일리 최신 발표</a>
@@ -346,24 +346,14 @@
                         <span style="width: 100%;height:275px;background:#F1F3F8;display: inline-block;"></span>
                       </div>
                       <div class="fiq-top">
-                        <p>005930 삼성전자</p>
+                        <p class="txt-num">005930 삼성전자</p><!-- 3.25 txt-num 추가 -->
                         <ul>
                           <li class="fiq-up">
                             <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                            <p>
+                            <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                               <span>목표주가</span>10,000
                               <span class="fiq-indi fiq-up"></span>
                             </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
-
-
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -375,22 +365,14 @@
                         <span style="width: 100%;height:275px;background:#F1F3F8;display: inline-block;"></span>
                       </div>
                       <div class="fiq-top">
-                        <p>005930 삼성전자</p>
+                        <p class="txt-num">005930 삼성전자</p><!-- 3.25 txt-num 추가 -->
                         <ul>
                           <li>
                             <p><span>투자의견</span> <span class="fiq-s">보유</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                            <p>
+                            <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                               <span>목표주가</span>10,000
                               <span class="fiq-indi fiq-down"></span>
                             </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -402,22 +384,14 @@
                         <span style="width: 100%;height:275px;background:#F1F3F8;display: inline-block;"></span>
                       </div>
                       <div class="fiq-top">
-                        <p>005930 삼성전자</p>
+                        <p class="txt-num">005930 삼성전자</p><!-- 3.25 txt-num 추가 -->
                         <ul>
                           <li class="fiq-down">
                             <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                            <p>
+                            <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                               <span>목표주가</span>10,000
                               <span class="fiq-indi fiq-up"></span>
                             </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -429,21 +403,14 @@
                         <span style="width: 100%;height:275px;background:#F1F3F8;display: inline-block;"></span>
                       </div>
                       <div class="fiq-top">
-                        <p>005930 삼성전자</p>
+                        <p class="txt-num">005930 삼성전자</p><!-- 3.25 txt-num 추가 -->
                         <ul>
                           <li class="fiq-down">
                             <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                            <p>
+                            <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                               <span>목표주가</span>10,000
                               <span class="fiq-indi fiq-down"></span>
                             </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -455,28 +422,14 @@
                         <span style="width: 100%;height:275px;background:#F1F3F8;display: inline-block;"></span>
                       </div>
                       <div class="fiq-top">
-                        <p>005930 삼성전자</p>
+                        <p class="txt-num">005930 삼성전자</p><!-- 3.25 txt-num 추가 -->
                         <ul>
                           <li class="fiq-down">
                             <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                            <p>
+                            <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                               <span>목표주가</span>10,000
                               <span class="fiq-indi"></span>
                             </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
-
-
-
-
-
-
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -488,11 +441,13 @@
                         <span style="width: 100%;height:275px;background:#F1F3F8;display: inline-block;"></span>
                       </div>
                       <div class="fiq-top">
-                        <p>005930 삼성전자</p>
+                        <p class="txt-num">005930 삼성전자</p><!-- 3.25 txt-num 추가 -->
                         <ul>
                           <li class="fiq-down">
                             <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                            <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                            <p class="txt-num"><!-- 3.25 txt-num 추가 -->
+                              <span>목표주가</span>10,000 <span class="fiq-indi"></span>
+                            </p>
                             <p><span>작성자</span>홍길동</p>
                             <p><span>발행기관</span>미래에셋증권</p>
                           </li>
@@ -555,7 +510,6 @@
                   </span>
                   <input type="search" placeholder="검색어를 입력하세요">
                   <a value="검색" class="fiq-find">검색</a>
-                  </form>
                 </div>
               </div>
             </section>
@@ -564,22 +518,15 @@
                 <div class="fiq-img"><span style="width: 225px;height: 221px;background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
                 <div class="fiq-r">
                   <div class="fiq-top">
-                    <p>삼성전자 <span>005930</span></p>
+                    <p class="txt-num">삼성전자 <span>005930</span></p><!-- 3.25 txt-num 추가 -->
                     <p class="fiq-pop-open"><a>/  동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
                     <ul>
                       <li class="fiq-up">
                         <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                        <p>
+                        <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                           <span>목표주가</span>10,000
                           <span class="fiq-indi fiq-up"></span>
                         </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
                         <p><span>작성자</span>홍길동</p>
                         <p><span>발행기관</span>미래에셋증권</p>
                         <p><span>발표일</span>2022-02-08</p>
@@ -595,23 +542,15 @@
                 <div class="fiq-img"><span style="width: 225px;height: 221px;background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
                 <div class="fiq-r">
                   <div class="fiq-top">
-                    <p>삼성전자 <span>005930</span></p>
+                    <p class="txt-num">삼성전자 <span>005930</span></p><!-- 3.25 txt-num 추가 -->
                     <p class="fiq-pop-open"><a>/  동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
                     <ul>
                       <li class="fiq-stay">
                         <p><span>투자의견</span> <span class="fiq-s">보유</span></p>
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                        <p>
+                        <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                           <span>목표주가</span>10,000
                           <span class="fiq-indi fiq-down"></span>
                         </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
-
                         <p><span>작성자</span>홍길동</p>
                         <p><span>발행기관</span>미래에셋증권</p>
                         <p><span>발표일</span>2022-02-08</p>
@@ -632,7 +571,9 @@
                     <ul>
                       <li class="fiq-down">
                         <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                        <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                        <p class="txt-num"><!-- 3.25 txt-num 추가 -->
+                          <span>목표주가</span>10,000 <span class="fiq-indi"></span>
+                        </p>
                         <p><span>작성자</span>홍길동</p>
                         <p><span>발행기관</span>미래에셋증권</p>
                         <p><span>발표일</span>2022-02-08</p>
