--- a/page19-newly-mo.html
+++ b/page19-newly-mo.html
@@ -66,18 +66,10 @@
                       <ul>
                         <li class="fiq-up">
                           <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                          <p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                             <span>목표주가</span>10,000
                             <span class="fiq-indi fiq-down"></span>
                           </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -93,18 +85,10 @@
                       <ul>
                         <li>
                           <p><span>투자의견</span> <span class="fiq-s">유지</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                          <p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                             <span>목표주가</span>10,000
                             <span class="fiq-indi"></span>
                           </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -120,17 +104,10 @@
                       <ul>
                         <li class="fiq-down">
                           <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                          <p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                             <span>목표주가</span>10,000
                             <span class="fiq-indi fiq-up"></span>
                           </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -146,7 +123,9 @@
                       <ul>
                         <li class="fiq-down">
                           <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
+                            <span>목표주가</span>10,000 <span class="fiq-indi"></span>
+                          </p>
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -162,7 +141,9 @@
                       <ul>
                         <li class="fiq-down">
                           <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
+                            <span>목표주가</span>10,000 <span class="fiq-indi"></span>
+                          </p>
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -178,7 +159,9 @@
                       <ul>
                         <li class="fiq-down">
                           <p><span>투자의견</span> <span class="fiq-s">매도</span></p>
-                          <p><span>목표주가</span>10,000 <span class="fiq-indi"></span></p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
+                            <span>목표주가</span>10,000 <span class="fiq-indi"></span>
+                          </p>
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                         </li>
@@ -365,21 +348,10 @@
                       <ul>
                         <li class="fiq-up">
                           <p><span>투자의견</span> <span class="fiq-s">매수</span></p>
-
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                          <p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                             <span>목표주가</span>10,000
                             <span class="fiq-indi fiq-down"></span>
                           </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
-
-
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                           <p><span>발표일</span>2022-02-08</p>
@@ -397,18 +369,10 @@
                       <ul>
                         <li>
                           <p><span>투자의견</span> <span class="fiq-s">유지</span></p>
-
-
-
-<!-- ####################### 3.14 수정 #########################-->
-                          <p>
+                          <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                             <span>목표주가</span>10,000
                             <span class="fiq-indi fiq-down"></span>
                           </p>
-<!-- ####################### 3.14 수정 끝#########################-->
-
-
-
                           <p><span>작성자</span>홍길동</p>
                           <p><span>발행기관</span>미래에셋증권</p>
                           <p><span>발표일</span>2022-02-08</p>
