--- a/page2-2-pc.html
+++ b/page2-2-pc.html
@@ -328,24 +328,10 @@
     <!-- [D] 파이낸셜아이큐 클래스 : .fiq-* 사용 -->
   <div id="container" class="fiq-container">
     <div class="inner">
-
-<!-- ####### 3.16 수정 fiq-wrap클래스에 fiq-newly 추가#######-->
       <div class="fiq-wrap fiq-newly">
         <article class="fiq-article fiq-page1s">
           <section class="fiq-section">
-
-<!-- ####### 3.16 수정 끝 #######-->
-
-
-
-<!-- ####### 3.16 수정 fiq-tab-wrap클래스에 fiq-tab-type-b 추가#######-->
-            <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-wrap1 fiq-tab2n fiq-tab1-active" style="text-align: left;margin-top: 50px;">
-<!-- ####### 3.16 수정 끝 #######-->
-
-
-
-
-
+            <div class="fiq-tab-wrap fiq-tab-type-b fiq-tab-2below fiq-tab-wrap1 fiq-tab2n fiq-tab1-active" style="margin-top: 50px;"><!-- 3.25 fiq-tab-2below 추가 text-left 스타일 삭제-->
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn1" data-tab="1">코스피</a>
               <a class="fiq-a fiq-tab1-btn fiq-tab-btn fiq-tab-btn2" data-tab="2">코스닥</a>
             </div>
