--- a/page2-7-pc.html
+++ b/page2-7-pc.html
@@ -332,7 +332,7 @@
         <article class="fiq-article fiq-page1s">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">장외IPO</h3>
+              <h2 class="fiq-h2">장외IPO</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
               <div class="fiq-date">
                 <p class="fiq-date-time txt-num"></p>
                 <p>20분 지연</p>
