--- a/page3-pc.html
+++ b/page3-pc.html
@@ -385,11 +385,11 @@
                   <tr>
                     <td colspan="2">투자별 매매동향</td>
                     <td class="pn">개인</td>
-                    <td class="fiq-down">-438억원</td>
+                    <td class="fiq-down" style="font-weight: 400;">-438억원</td><!-- 3.25 수정 스타일 추가-->
                     <td class="pn">외국인</td>
-                    <td class="fiq-up">+1,291억원</td>
+                    <td class="fiq-up" style="font-weight: 400;">+1,291억원</td><!-- 3.25 수정 스타일 추가 -->
                     <td class="pn">기관</td>
-                    <td class="pn-ls fiq-up">+1,291억원</td>
+                    <td class="pn-ls fiq-up" style="font-weight: 400;">+1,291억원</td><!-- 3.25 수정 스타일 추가 -->
                   </tr>
                   </tbody>
                 </table>
@@ -422,7 +422,7 @@
                     <p class="fiq-source">IBK투자증권 | 2021.12.16</p>
                     <div class="fiq-txt">
                       <img src="img/pc/report.png" alt="">
-                      <p class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</p>
+                      <h3 class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
                       KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록. 전일 미국 물가 지표 상승 부담에 테이퍼링 부담감이 확대된 가운데, 연준의 통화정책 결정 및 방향성 주목하며 관망세 짙어짐. 국내 확진자 수 급증에 따른 방역 강화 우려도 증시에 하방 압력을 가함.
                     </div>
                   </li>
@@ -430,7 +430,7 @@
                     <p class="fiq-source">IBK투자증권 | 2021.12.16</p>
                     <div class="fiq-txt">
                       <img src="img/pc/report.png" alt="">
-                      <p class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</p>
+                      <h3 class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
                       KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록. 전일 미국 물가 지표 상승 부담에 테이퍼링 부담감이 확대된 가운데, 연준의 통화정책 결정 및 방향성 주목하며 관망세 짙어짐. 국내 확진자 수 급증에 따른 방역 강화 우려도 증시에 하방 압력을 가함.
                     </div>
                   </li>
@@ -438,7 +438,7 @@
                     <p class="fiq-source">IBK투자증권 | 2021.12.16</p>
                     <div class="fiq-txt">
                       <img src="img/pc/report.png" alt="">
-                      <p class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</p>
+                      <h3 class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
                       KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록. 전일 미국 물가 지표 상승 부담에 테이퍼링 부담감이 확대된 가운데, 연준의 통화정책 결정 및 방향성 주목하며 관망세 짙어짐. 국내 확진자 수 급증에 따른 방역 강화 우려도 증시에 하방 압력을 가함.
                     </div>
                   </li>
@@ -446,21 +446,21 @@
                     <p class="fiq-source">IBK투자증권 | 2021.12.16</p>
                     <div class="fiq-txt">
                       <img src="img/pc/report.png" alt="">
-                      <p class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</p>
+                      <h3 class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
                       KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록. 전일 미국 물가 지표 상승 부담에 테이퍼링 부담감이 확대된 가운데, 연준의 통화정책 결정 및 방향성 주목하며 관망세 짙어짐. 국내 확진자 수 급증에 따른 방역 강화 우려도 증시에 하방 압력을 가함.
                     </div>
                   </li>
                   <li>
                     <p class="fiq-source">IBK투자증권 | 2021.12.16</p>
                     <div class="fiq-txt">
-                      <p class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</p>
+                      <h3 class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
                       KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록. 전일 미국 물가 지표 상승 부담에 테이퍼링 부담감이 확대된 가운데, 연준의 통화정책 결정 및 방향성 주목하며 관망세 짙어짐. 국내 확진자 수 급증에 따른 방역 강화 우려도 증시에 하방 압력을 가함.
                     </div>
                   </li>
                   <li>
                     <p class="fiq-source">IBK투자증권 | 2021.12.16</p>
                     <div class="fiq-txt">
-                      <p class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</p>
+                      <h3 class="fiq-tit">[Start with IBKS] KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록</h3><!-- 3.25 h3태그로 변경 -->
                       KOSPI는 FOMC 회의 결과 주시하며 강보합을 기록. 전일 미국 물가 지표 상승 부담에 테이퍼링 부담감이 확대된 가운데, 연준의 통화정책 결정 및 방향성 주목하며 관망세 짙어짐. 국내 확진자 수 급증에 따른 방역 강화 우려도 증시에 하방 압력을 가함.
                     </div>
                   </li>
@@ -587,21 +587,34 @@
                   </span>
               </div>
               <div class="fiq-list fiq-list3">
-                  <span class="select-style select-style3">
-                    <select title="카테고리 선택" name="isGrpId">
-                      <option value="">전체</option>
-                    </select>
-                  </span>
+                <span class="select-style select-style3">
+                  <select title="카테고리 선택" name="isGrpId">
+                    <option value="">전체</option>
+                  </select>
+                </span>
                 <input type="search" placeholder="검색어를 입력하세요">
                 <a value="검색" class="fiq-find">검색</a>
-                </form>
               </div>
 
               <div class="fiq-box-wrap">
                 <div class="fiq-img"><span style="width: 225px;height: 221px;background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
                 <div class="fiq-r">
                   <div class="fiq-top">
-                    <p>삼성전자 <span>005930</span></p>
+
+
+
+
+
+
+
+
+
+
+                    <p>삼성전자 <span class="txt-num">005930</span></p><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <p class="fiq-pop-open"><a>/  동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
                     <ul>
                       <li class="fiq-up">
@@ -609,17 +622,19 @@
 
 
 
-                        <!-- ####################### 3.14 수정 #########################-->
-                        <p>
+                        <p class="txt-num"><!-- 3.25 txt-num 추가 -->
                           <span>목표주가</span>10,000
                           <span class="fiq-indi fiq-up"></span>
                         </p>
-                        <!-- ####################### 3.14 수정 끝#########################-->
+
+
+
+
 
 
                         <p><span>작성자</span>홍길동</p>
                         <p><span>발행기관</span>미래에셋증권</p>
-                        <p><span>발표일</span>2022-02-08</p>
+                        <p class="txt-num"><span>발표일</span>2022-02-08</p>
                       </li>
                     </ul>
                   </div>
@@ -632,23 +647,26 @@
                 <div class="fiq-img"><span style="width: 225px;height: 221px;background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
                 <div class="fiq-r">
                   <div class="fiq-top">
-                    <p>삼성전자 <span>005930</span></p>
+
+
+
+
+
+
+                    <p>삼성전자 <span class="txt-num">005930</span></p><!-- 3.25 txt-num 추가 -->
+
+
+
+
+
                     <p class="fiq-pop-open"><a>/  동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
                     <ul>
                       <li class="fiq-stay">
                         <p><span>투자의견</span> <span class="fiq-s">보유</span></p>
-
-
-                        <!-- ####################### 3.14 수정 #########################-->
                         <p>
                           <span>목표주가</span>10,000
                           <span class="fiq-indi fiq-down"></span>
                         </p>
-                        <!-- ####################### 3.14 수정 끝#########################-->
-
-
-
-
                         <p><span>작성자</span>홍길동</p>
                         <p><span>발행기관</span>미래에셋증권</p>
                         <p><span>발표일</span>2022-02-08</p>
@@ -664,7 +682,15 @@
                 <div class="fiq-img"><span style="width: 225px;height: 221px;background:#F8F8F8;display: inline-block;border-radius: 10px; "></span></div>
                 <div class="fiq-r">
                   <div class="fiq-top">
-                    <p>삼성전자 <span class="txt-num">005930</span></p>
+
+
+
+
+                    <p>삼성전자 <span class="txt-num">005930</span></p><!-- 3.25 txt-num 추가 -->
+
+
+
+
                     <p class="fiq-pop-open"><a>/  동해물과 백두산이 마르고 닳도록 동해물과 백두산이 마르고 닳도록</a></p>
                     <ul>
                       <li class="fiq-down">
@@ -907,12 +933,6 @@
             </div>
           </div>
         </div>
-
-<!-- -------------------------####### 03.19 수정 끝 #######-->
-
-
-
-
       </div>
     </div>
   </div>
