--- a/page9-pc.html
+++ b/page9-pc.html
@@ -332,7 +332,7 @@
         <article class="fiq-article fiq-page1s fiq-page8 fiq-page9">
           <section class="fiq-section">
             <div class="fiq-top-wrap">
-              <h3 class="fiq-h3-2">MY포트폴리오</h3>
+              <h2 class="fiq-h2">MY포트폴리오</h2><!-- 3.25 h2태그로 변경 및 fiq-h2삽입 -->
               <div class="fiq-date">
                 <p class="fiq-date-time txt-num"></p>
                 <p>20분 지연</p>
@@ -390,20 +390,26 @@
                 <a class="fiq-a">등록</a>
               </div>
               <table cellpadding="0" cellspacing="0" border="0" class="fiq-t">
+
+                <!-- 3.25 colgroup width:값 변경 -->
                 <colgroup>
                   <col width="60">
-                  <col width="138">
-                  <col width="98">
-                  <col width="98">
-                  <col width="98">
-                  <col width="98">
-                  <col width="98">
-                  <col width="98">
-                  <col width="98">
-                  <col width="98">
-                  <col width="98">
+                  <col width="120">
+                  <col width="100">
+                  <col width="100">
+                  <col width="100">
+                  <col width="100">
+                  <col width="100">
+                  <col width="100">
+                  <col width="100">
+                  <col width="100">
+                  <col width="100">
                   <col width="100">
                 </colgroup>
+
+
+
+
                 <!-- ####### td에 fiq-up클래스 들어가면 상승 빨간색 #######-->
                 <!-- ####### td에 fiq-down클래스 들어가면 하락 파란색 #######-->
                 <thead>
